--- a/special-issue/index.html
+++ b/special-issue/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Special Issue - AII2021</title>
+  <title>Special Issue - AI + Informetrics 2021</title>
   <meta name="description" content="Special Issue - AII2021">
   <meta name="author" content="">
 
@@ -22,9 +22,9 @@
   
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   
-<h1>Special Issue in Scientometrics -- AII2021</h1>
+<h1>Special Issue in Scientometrics - AI + Informetrics (AII2021)</h1>
 <p><br></p>
-Accepted submissions at 1st Workshop on AI + Informetrics (AII2021) at the iConference2021 the will be invited to submit extended paper to our special issue in Scientometrics (More details will follow soon).
+Accepted submissions at 1st Workshop on AI + Informetrics (AII2021) at the iConference2021 will be invited to submit extended papers to our special issue in Scientometrics (more details will follow soon).
 
 <h2>Submission Details and Deadlines</h2>
 
