--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>13:25</td>
             <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper3.pdf'>Collaboration
               and Knowledge Networks: a Framework on Analyzing Evolution of
-              University-industry Collaborative Innovation</a></td>
+              University-industry Collaborative Innovation</a> [<a href="videos/video3.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Hongshu Chen</font><font class="font61"> and Xinna Song</font></td>
           </tr>
