--- a/index.html
+++ b/index.html
@@ -624,9 +624,7 @@
       <div class="one-half column" style="margin-top: 5%; color: #000;">
       <p>1st Workshop on AI + Informetrics (AII2021) at the <a href="https://www.ischools.org/iConference">iConference2021</a>, Virtual, March 17</p>
       <p><img src="images/Logo_iconference.png" width="600" height="125" alt=""/></p>
-	  
-      <p><span class="news"><strong>News</strong></span> :  <strong>Special Issue in Scientometrics - "AI + Informetrics" (AII2021) </strong> <a href="special-issue/index.html">see instructions: Special Issue information</a>. </p>
-	  
+      <p><span class="news"><strong>News:</strong></span> Since AII Workshop is hosted by iConference2021, at least one author per paper must register, see instructions here <a href="%3Chttps:/www.ischools.org/Registration">&lt;https://www.ischools.org/Registration</a>&gt;. </p>
       <p>Keynote by Prof. <strong>Ying Ding</strong> (School of Information, University of Texas at Austin): <em><strong>AI and Science of Science</strong></em>.</p>
       <p>Keynote by Dr. <strong>Kevin Boyack</strong> (SciTech Strategies): <strong>Global Models of Science and Their Applications</strong>. </p>
       <p><span class="news"><strong>News</strong></span> : The organizing committee of the AI+Informetrics Workshop 2021 is aware that it is a challenging time due to the global COVID-19 pandemics. Aiming to provide a convenient time for the community to conduct high-quality research, we have decided to extend the deadline for submission to: <span class="news"><strong>February 20th, 2021</strong></span> (ANY TIMEZONE on earth).</p>
@@ -955,7 +953,7 @@ We accept two types Regular Papers:</p>
         <p>Workshop proceedings will be deposited online in the <a href="http://ceur-ws.org/">CEUR workshop proceedings</a> publication service. This way the proceedings will be permanently available and citable (digital persistent identifiers and long-term preservation).</p>
         <p>&nbsp;</p>
         <h2 align="left">Special Issue</h2>
-          <p>Accepted submissions will be invited to submit to our special issue in <a href="https://www.springer.com/journal/11192">Scientometrics</a>.</p>
+          <p>Accepted submissions will be invited to submit to our special issue in <a href="https://www.springer.com/journal/11192">Scientometrics</a>. Detailed information of this SCIM special issue could be found on the website: <a href=https://ai-informetrics.github.io/special-issue/>https://ai-informetrics.github.io/special-issue/</a></p>
         <p>&nbsp; </p>
         <h2 align="left">Organising Committee</h2>
         <p align="justify">
