--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>16:25</td>
             <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper15.pdf'>The
               Interrelation of Sustainable Development Goals in Publications and Patents: A
-              Machine Learning Approach</a></td>
+              Machine Learning Approach</a> [<a href="videos/video15.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Arash Hajikhani</font><font class="font61"> and Arho Suominen</font></td>
           </tr>
