--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
           <tr height=37 style='height:28.0pt'>
             <td height=37 class=xl821 style='height:28.0pt;border-top:none'>13:00</td>
             <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper1.pdf'>Research on
-              Heterogeneous Enhanced Network Embedding for Cooperation Prediction</a> [<a href="">video</a>]</td>
+              Heterogeneous Enhanced Network Embedding for Cooperation Prediction</a> [video]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Xin Zhang</font><font class="font61">, Yi Wen and Haiyun Xu</font></td>
           </tr>
