--- a/special-issue/index.html
+++ b/special-issue/index.html
@@ -31,7 +31,7 @@ Accepted submissions at 1st Workshop on AI + Informetrics (AII2021) at the iConf
 <ul>
     <li><strong>July 15, 2021</strong>: All submissions due<ul>
             <li>Original content typeset abiding by the Scientometrics Authors&apos; Guidelines</li>
-            <li>Submission via the &nbsp;Scientometrics Editorial Manager under &ldquo;S.I. : TBD&rdquo;&nbsp;</li>
+            <li>Submission via the &nbsp;Scientometrics Editorial Manager under &ldquo;S.I. : AI + Informetrics&rdquo;&nbsp;</li>
         </ul>
     </li>
     <li>1st round of reviews<ul>
