--- a/special-issue/index.html
+++ b/special-issue/index.html
@@ -24,7 +24,8 @@
   
 <h1>Special Issue in Scientometrics - AI + Informetrics (AII2021)</h1>
 <p><br></p>
-Accepted submissions at 1st Workshop on AI + Informetrics (AII2021) at the iConference2021 will be invited to submit extended papers to our special issue in <a href="https://www.springer.com/journal/11192">Scientometrics </a> (more details will follow soon).
+Accepted submissions at 1st Workshop on AI + Informetrics (AII2021) at the iConference2021 will be invited to submit extended papers to our special issue in <a href="https://www.springer.com/journal/11192">Scientometrics </a>. <br>
+The <a href="https://link.springer.com/collections/ebfiegeiie">open call for papers</a> at Scientometrics.
 
 <h2>Submission Details and Deadlines</h2>
 
