--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@ We accept two types Regular Papers:</p>
         <p>Workshop proceedings will be deposited online in the <a href="http://ceur-ws.org/">CEUR workshop proceedings</a> publication service. This way the proceedings will be permanently available and citable (digital persistent identifiers and long-term preservation).</p>
         <p>&nbsp;</p>
         <h2 align="left">Special Issue</h2>
-          <p>Accepted submissions will be invited to submit to our special issue in <a href="https://www.springer.com/journal/11192">Scientometrics</a>. Detailed information of this SCIM special issue could be found on the website: <a href=https://ai-informetrics.github.io/special-issue/>https://ai-informetrics.github.io/special-issue/</a></p>
+          <p>Accepted submissions will be invited to submit to our special issue in <a href="https://www.springer.com/journal/11192">Scientometrics</a>. Detailed information of this SCIM special issue could be found on the website: <a href="https://ai-informetrics.github.io/special-issue/">https://ai-informetrics.github.io/special-issue/</a> and the <a href="https://link.springer.com/collections/ebfiegeiie">open call for papers</a>.</p>
         <p>&nbsp; </p>
         <h2 align="left">Organising Committee</h2>
         <p align="justify">
