--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>16:15</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='http://ceur-ws.org/Vol-2871/paper14.pdf.pdf'>Emerging
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='http://ceur-ws.org/Vol-2871/paper14.pdf'>Emerging
               Technology Opportunity Identification Based on Community Detection and Burst
               Detection: A Case study of Intelligent Robots</a> [<a href="videos/video14.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
@@ -905,7 +905,7 @@
           </tr>
           <tr height=75 style='height:56.0pt'>
             <td height=75 class=xl821 style='height:56.0pt;border-top:none'>16:45</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='http://ceur-ws.org/Vol-2871/paper17.pdf.pdf'>ITGInsight -
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='http://ceur-ws.org/Vol-2871/paper17.pdf'>ITGInsight -
               Discovering and Visualizing Science, Technology and Innovation Information
               for Generating Competitive Technological Intelligence</a> [<a href="videos/video17.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Xuefeng Wang, <font
